<?xml version="1.0"?>
<package format="2">
  <name>study_gpt3</name>
  <version>1.0.0</version>
  <description>The study_gpt3 package</description>
  <maintainer email="hasegawa.shoichi@em.ci.ritsumei.ac.jp">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

